--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Sedona</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <шапка data-test="header">
+        <img src="#" alt="Логотип CITY OF SEDONA">
+        <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">О седоне</a></li>
+            <li><a href="#">Гостиницы</a></li>
+            </ul>
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#">12</a></li>
+            </ul>
+            <a href="#">Хочу сюда!</a></li>
+           <p> <header><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
+    </header>
+    <основное-содержание data-test="main">
+        <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+        <P>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</P>
+      <ul>
+        <li>НАСТОЯЩИЙ ГОРОДОК</li>
+        <P>Седона-не атракцион для туристов,там течет своя жизнь</P>
+        <img src="#" alt=" Настоящий городок">
+        </ul>
+        <ul>
+        <li>НЕБОЛЬШАЯ ПЛОЩАДЬ</li>
+        <p>Все достопримечательности находятся очень близко</p>
+        </ul>
+        <ul>
+            <li>Красивая дорога</li>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </ul>
+            <ul>
+                <li>Мало туристов</li>
+                <p>Большинство едет в Гранд Каньон и толпится там</p>
+                </ul>
+                <img src="#" alt="Горы">
+                <ul>
+                    <li>Там есть
+                        мост дьявола</li>
+                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                    </ul>
+                    <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+                    <p>Опытный персонал и качественное обслуживание!</p>
+                    <ul>
+                        <li> <img src="#" alt="Жилье">
+                           <p>Жилье<p>
+                            <p>Рекомендуем пожить в настоящем мотеле, </p></p>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+                                <li> <img src="#" alt="Еда"></li>
+                                   <p>Еда</p>
+                                    <p>Всегда заказывайте
+                                        топовый фирменный бургер, </p>
+                                        <li> <img src="#" alt="Сувениры">
+                                            <p>Сувениры</p>
+                                             <p>Не только китайского,
+                                                но и настоящего местного производства! </p></i>
+                                             </ul>
+                                             <h3>Заинтересовались?</h3>
+                                             <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                                             <a href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
 
+
+    </main>
+    <подвал data-test="footer>
+        <h4>Подпишитесь на рассылку</h4>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <label>
+             <input type="text" name="username">
+          </label>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <a href="#">+7 (812) 812-12-12</a>
+          <img src="#" alt="Логотип HTML ACADEMY">
+    </footer>
   </body>
 </html>
