--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <шапка data-test="header">
+    <data-test="header">
         <img src="#" alt="Логотип CITY OF SEDONA">
         <ul>
             <li><a href="#">Главная</a></li>
@@ -19,7 +19,7 @@
             <a href="#">Хочу сюда!</a></li>
            <p> <header><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
     </header>
-    <основное-содержание data-test="main">
+    <data-test="main">
         <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <P>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</P>
       <ul>
@@ -67,7 +67,7 @@
 
 
     </main>
-    <подвал data-test="footer>
+    <data-test="footer>
         <h4>Подпишитесь на рассылку</h4>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <label>
