--- a/index.html
+++ b/index.html
@@ -7,41 +7,40 @@
   </head>
   <body>
     <header data-test="header">
-        <img src="#" alt="Логотип CITY OF SEDONA">
+       <a href="index.html"> <img src="#" alt="Логотип CITY OF SEDONA">
+        </a>
         <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">О седоне</a></li>
-            <li><a href="#">Гостиницы</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
             </ul>
             <ul>
                 <li><a href="#"></a></li>
                 <li><a href="#">12</a></li>
             </ul>
             <a href="#">Хочу сюда!</a></li>
-           <p> <header><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
-    </header>
+           <p><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
+
     <main data-test="main">
         <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
-        <P>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</P>
+        <p>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</p>
       <ul>
         <li>НАСТОЯЩИЙ ГОРОДОК</li>
-        <P>Седона-не атракцион для туристов,там течет своя жизнь</P>
+        <p>Седона-не атракцион для туристов,там течет своя жизнь</p>
         <img src="#" alt=" Настоящий городок">
-        </ul>
-        <ul>
+
+
         <li>НЕБОЛЬШАЯ ПЛОЩАДЬ</li>
         <p>Все достопримечательности находятся очень близко</p>
-        </ul>
-        <ul>
+
             <li>Красивая дорога</li>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </ul>
-            <ul>
+
                 <li>Мало туристов</li>
                 <p>Большинство едет в Гранд Каньон и толпится там</p>
                 </ul>
                 <img src="#" alt="Горы">
-                <ul>
+
                     <li>Там есть
                         мост дьявола</li>
                     <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -50,8 +49,8 @@
                     <p>Опытный персонал и качественное обслуживание!</p>
                     <ul>
                         <li> <img src="#" alt="Жилье">
-                           <p>Жилье<p>
-                            <p>Рекомендуем пожить в настоящем мотеле, </p></p>
+                           <p>Жилье</p>
+                            <p>Рекомендуем пожить в настоящем мотеле, </p>
 
                                 <li> <img src="#" alt="Еда"></li>
                                    <p>Еда</p>
@@ -60,7 +59,7 @@
                                         <li> <img src="#" alt="Сувениры">
                                             <p>Сувениры</p>
                                              <p>Не только китайского,
-                                                но и настоящего местного производства! </p></i>
+                                                но и настоящего местного производства! </p></li>
                                              </ul>
                                              <h3>Заинтересовались?</h3>
                                              <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
@@ -72,8 +71,9 @@
         <h4>Подпишитесь на рассылку</h4>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <label>
+
              <input type="text" name="username">
-          </label>
+</label>>
           <ul>
             <li></li>
             <li></li>
