--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="newsletter">
         <h4 class="page-footer-title">Подпишитесь на рассылку</h4>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-<form class="newsletter-form" action="https:echo.htmlacademy.ru/" method="post">
+<form class="newsletter-form" action="https:htmlacademy.ru/" method="post">
 
 
              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
@@ -87,7 +87,8 @@
             <li></li>
           </ul>
           <a href="#">+7 (812) 812-12-12</a>
-          <img src="#" alt="Логотип HTML ACADEMY">
+          <a href="https:htmlacademy.ru/"><img src="#" alt="Логотип HTML ACADEMY">
+            </a>
     </footer>
   </body>
 </html>
