--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header datatest="header" >
+    <header data-test="header" >
        <a href="index.html"> <img src="#" alt="Логотип CITY OF SEDONA">
         </a>
         <ul>
@@ -21,7 +21,7 @@
             <a href="#">Хочу сюда!</a></li>
            <p><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
 
-    <main datatest="main">
+    <main data-test="main">
         <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <p>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</p>
       <ul>
@@ -67,7 +67,7 @@
 
 
     </main>
-    <footer datatest="footer">
+    <footer data-test="footer">
       <section class="newsletter">
         <h4 class="page-footer-title">Подпишитесь на рассылку</h4>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
