Вложил картинки в список

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </a>
         <ul>
             <li><a href="#">Главная</a></li>
-            <li><a href="#">О седоне</a></li>
+            <li><a href="#">О Cедоне</a></li>
             <li><a href="catalog.html">Гостиницы</a></li>
             </ul>
             <ul>
@@ -19,31 +19,35 @@
                 <li><a href="#">12</a></li>
             </ul>
             <a href="#">Хочу сюда!</a></li>
-           <p><img src="#" alt="Логотип WELCOMT TO THE SEDONA"></header></p>
+           </header>
 
     <main data-test="main">
+      <p><img src="#" alt="Welcome to the gorgeous Sedona,because the Grand Canyon sucks!"</p>
         <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <p>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</p>
-      <ul>
-        <li>НАСТОЯЩИЙ ГОРОДОК</li>
+      <>
+        <li>НАСТОЯЩИЙ ГОРОДОК
         <p>Седона-не атракцион для туристов,там течет своя жизнь</p>
         <img src="#" alt=" Настоящий городок">
+        </li>
 
 
-        <li>НЕБОЛЬШАЯ ПЛОЩАДЬ</li>
+        <li>НЕБОЛЬШАЯ ПЛОЩАДЬ
         <p>Все достопримечательности находятся очень близко</p>
+        </li>
 
-            <li>Красивая дорога</li>
+            <li>Красивая дорога
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
 
-                <li>Мало туристов</li>
+                <li>Мало туристов
                 <p>Большинство едет в Гранд Каньон и толпится там</p>
-                </ul>
-                <img src="#" alt="Горы">
+                </li>
 
-                    <li>Там есть
-                        мост дьявола</li>
-                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                <li><img src="#" alt="Горы">
+
+                    <p>Там есть мост дьявола</p>
+                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p></li>
                     </ul>
                     <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
                     <p>Опытный персонал и качественное обслуживание!</p>
