--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <a href="#">Хочу сюда!</a></li>
            </header>
 
-    <main data-test="main">
+    <ul data-test="main">
       <p><img src="#" alt="Welcome to the gorgeous Sedona,because the Grand Canyon sucks!"</p>
         <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <p>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</p>
-      <>
+      <ul>
         <li>НАСТОЯЩИЙ ГОРОДОК
         <p>Седона-не атракцион для туристов,там течет своя жизнь</p>
         <img src="#" alt=" Настоящий городок">
@@ -34,32 +34,37 @@
 
         <li>НЕБОЛЬШАЯ ПЛОЩАДЬ
         <p>Все достопримечательности находятся очень близко</p>
+        <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
         </li>
 
             <li>Красивая дорога
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
             </li>
 
                 <li>Мало туристов
                 <p>Большинство едет в Гранд Каньон и толпится там</p>
+                <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
                 </li>
 
                 <li><img src="#" alt="Горы">
 
                     <p>Там есть мост дьявола</p>
-                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p></li>
+                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                    <p>Седона-не аттракцион для туристов, там течет своя жизнь</p></li>
                     </ul>
                     <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
                     <p>Опытный персонал и качественное обслуживание!</p>
+
                     <ul>
                         <li> <img src="#" alt="Жилье">
                            <p>Жилье</p>
-                            <p>Рекомендуем пожить в настоящем мотеле, </p>
+                            <p>Рекомендуем пожить в настоящем мотеле, </p></li>
 
-                                <li> <img src="#" alt="Еда"></li>
+                                <li> <img src="#" alt="Еда">
                                    <p>Еда</p>
                                     <p>Всегда заказывайте
-                                        топовый фирменный бургер, </p>
+                                        топовый фирменный бургер, </p></li>
                                         <li> <img src="#" alt="Сувениры">
                                             <p>Сувениры</p>
                                              <p>Не только китайского,
