--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
 </form>
       </section>
 
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <a href="#">+7 (812) 812-12-12</a>
-          <a href="https:htmlacademy.ru/"><img src="#" alt="Логотип HTML ACADEMY">
-            </a>
+      <ul>
+        <li><a href="https:vk.ru/">VK</a></li>
+        <li><a href="https:Telegram.org/">Telegram</a></li>
+        <li><a href="https:Youtube.ru/">Youtube</a></li>
+
+
+      </ul>
+      <a href="#">+7 (812) 812-12-12</a>
+      <a href="https:htmlacademy.ru/"><img src="#" alt="Логотип HTML ACADEMY">
+        </a>
     </footer>
   </body>
 </html>
