--- a/Catalog.html
+++ b/Catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <meta charset="utf-8">
   <head>
-    <title>Sedona</title>
+    <title>Католог</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
