--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <li><a href="#">12</a></li>
             </ul>
             <a href="#">Хочу сюда!</a></li>
+            <h1 class="visually-hidden">Sedona</h1>
            </header>
 
     <ul data-test="main">
       <p><img src="#" alt="Welcome to the gorgeous Sedona,because the Grand Canyon sucks!"</p>
-        <h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+        <h2>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
         <p>Рассмотрим причины,по которым Седона круче,чем Гранд-Каньон!</p>
       <ul>
         <li>НАСТОЯЩИЙ ГОРОДОК
