--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>Католог</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
