--- a/catalog.html
+++ b/catalog.html
@@ -233,33 +233,33 @@
           </div>
         </ul>
 
-        <ul>
-          <li>
-            <a href="#"> 1</a>
+        <ul class="pagination">
+          <li >
+            <a class="pagination-item1" href="#"> 1</a>
           </li>
-          <li>
-            <a href="#"> 2</a>
+          <li >
+            <a class="pagination-item2" href="#"> 2</a>
           </li>
-          <li>
-            <a href="#"> 3</a>
+          <li >
+            <a class="pagination-item3" href="#"> 3</a>
           </li>
-          <li>
-            <a href="#"> 4</a>
+          <li >
+            <a class="pagination-item4" href="#"> 4</a>
           </li>
-          <li>
-            <a href="#"> ...</a>
+          <li >
+            <a class="pagination-item5" href="#"> ...</a>
           </li>
-          <li>
-            <a href="#"> 10</a>
+          <li >
+            <a class="pagination-item6" href="#"> 10</a>
           </li>
         </ul>
 
 
   </main>
   <footer data-test="footer">
-    <div class="subscribe">
-      <h4 class="page-footer-title">Подпишитесь на рассылку</h4>
-      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+    <div class="subscribe-catalog">
+      <h4 class="page-footer-title2">Подпишитесь на рассылку</h4>
+      <p class="page-footer-title3">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
       <form class="subscribe-form" action="https:htmlacademy.ru/" method="post">
 
 
